# daily-bugle

./: .gitignore  Cargo.toml  README.md  build.sh  rustfmt.toml
agent_core/: Cargo.toml  agent_core.rs  agent_loop.rs  compaction.rs  session.rs
calendar/: Cargo.toml
career/: Cargo.toml  career.rs  resume.rs
cli/: Cargo.toml
cli/src/: app.rs  command.rs  db.rs  fortress_command.rs  good_morning_command.rs  logger.rs  main.rs  reminder_command.rs  social_command.rs  tech_command.rs  tool_command.rs
cli/src/commands/: almanac_command.rs  fortress_command.rs  mod.rs  tech_command.rs
config/: Cargo.toml  config.rs  configuration.rs  model.rs  path.rs  reminders.rs
diagrams/: cli_social.py  cli_technical.py
fortress/: Cargo.toml  bitwarden.rs
fortress/bitwarden/: folder.rs  item.rs
fs_cache/: Cargo.toml  fs_cache.rs
git/: Cargo.toml  git.rs
google/: package.json  tsconfig.json
google/src/: calendar.ts  client.ts  init.ts
local_storage/: Cargo.toml  key.rs  local_storage.rs
reminders/: Cargo.toml  important_date.rs  reminders.rs
spaced_recall/: Cargo.toml  db.rs  model.rs  scheduling.rs  spaced_recall.rs
spaced_recall/migrations/: initialize_tables.sql
src/: main.rs
src/api_client/: weather.rs
src/cli/: config.rs  mod.rs  weather_command.rs
src/news_command/: mod.rs
src/news_lib/: mod.rs
src/ui/: display.rs  mod.rs
third_party_api/: Cargo.toml  third_party_api.rs
third_party_api/news/: mod.rs  request_response.rs
third_party_api/weather/: mod.rs  openmeteo.rs  request_response.rs
time_out/: Cargo.toml  cache.rs  constant.rs  scrape.rs  time_out.rs
weather/: Cargo.toml  response.rs  weather.rs
web_scraper/: Cargo.toml  aws.rs  constant.rs  deep_learning.rs  figma.rs  github.rs  google.rs  hackernews.rs  imperva.rs  lucumr.rs  mdn.rs  medium.rs  netflix.rs  notion.rs  nytimes.rs  openai.rs  square.rs  stripe.rs  time_out.rs  uber.rs  web_scraper.rs  wikipedia.rs  xml.rs
