[workspace]
resolver = "3"
members = [
  "cli",
  "config",
  "local_storage",
  "reminders",
  "weather",
  "web_scraper",
]
default-members = ["cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Cesar <58753718+Ces-D@users.noreply.github.com>"]

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.47", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
headless_chrome = "1.0.18"
reqwest = { version = "0.12.23", features = ["json"] }
log = "0.4.28"
flate2 = "1.1.4"
env_logger = "0.11.8"
quick-xml = "0.38.3"
rrule = "0.14.0"
scraper = "0.24.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
rand = "0.9.2"
tokio = { version = "1", features = ["full"] }
toml = "0.9.7"
url = "2.5.7"

config = { path = "./config" }
weather = { path = "./weather" }
local_storage = { path = "./local_storage" }
web_scraper = { path = "./web_scraper" }

[workspace.lints.clippy]
unwrap_used = "deny"
