[workspace]
resolver = "3"
members = [
  "agent_core",
  "cli",
  "config",
  "fortress",
  "git",
  "local_storage",
  "spaced_recall",
  "third_party_api",
  "web_scraper",
]
default-members = ["cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Cesar <58753718+Ces-D@users.noreply.github.com>"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11.8"
flate2 = "1.1.4"
futures = "0.3.32"
fsrs = "5.2.0"
genai = "0.5.3"
headless_chrome = "1.0.18"
log = "0.4.28"
num_enum = "0.7"
quick-xml = "0.38.3"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json"] }
scraper = "0.24.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1"
strum = "0.27"
strum_macros = "0.27"
surrealdb = "2.3.10"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.18"
toml = "0.9.7"
url = "2.5.7"
uuid = { version = "1.23.0", features = ["v4"] }
rusqlite = "0.39.0"

config = { path = "./config" }
fortress = { path = "./fortress" }
git = { path = "./git" }
local_storage = { path = "./local_storage" }
third_party_api = { path = "./third_party_api" }
web_scraper = { path = "./web_scraper" }
spaced_recall = { path = "./spaced_recall" }
agent_core = { path = "./agent_core" }

[workspace.lints.clippy]
unwrap_used = "deny"
