[package]
name = "agent_core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "agent_core.rs"

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
genai.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

config.workspace = true

[lints]
workspace = true
