[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "daily-bugle"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
rand.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true

config.workspace = true
web_scraper.workspace = true
reminders.workspace = true
git.workspace = true
career.workspace = true
third_party_api.workspace = true
