[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "daily-bugle"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tokio.workspace = true

fortress.workspace = true
git.workspace = true
third_party_api.workspace = true
web_scraper.workspace = true
config.workspace = true
spaced_recall.workspace = true
agent_core.workspace = true
