[package]
name = "config"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "config.rs"

[dependencies]
log.workspace = true
anyhow.workspace = true
serde.workspace = true
rrule.workspace = true
toml.workspace = true
chrono.workspace = true

[lints]
workspace = true
