[package]
name = "fortress"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "fortress.rs"

[dependencies]
log.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
chrono.workspace = true

local_storage.workspace = true

[lints]
workspace = true
