[package]
name = "local_storage"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "local_storage.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
log.workspace = true

config.workspace = true

[lints]
workspace = true
