[package]
name = "reminders"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "reminders.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
rrule.workspace = true
chrono.workspace = true
log.workspace = true
toml.workspace = true

config.workspace = true
