[package]
name = "spaced_recall"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "spaced_recall.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
fsrs.workspace = true
serde.workspace = true
genai.workspace = true
rusqlite.workspace = true


config.workspace = true

[lints]
workspace = true
