[package]
name = "web_scraper"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "web_scraper.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
headless_chrome.workspace = true
reqwest.workspace = true
flate2.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
scraper.workspace = true

local_storage.workspace = true

[dev-dependencies]
env_logger.workspace = true
